# DoidsCAD

./: .gitignore  CMakeLists.txt  buildresult.h  cadviewport.cpp  cadviewport.h  main.cpp  mainwindow.cpp  mainwindow.h  occtwindow.cpp  occtwindow.h  operationlistdock.cpp  operationlistdock.h  projectbuilder.cpp  projectbuilder.h  projectdocument.cpp  projectdocument.h  projectmodel.cpp  projectmodel.h  projecttypes.h  propertyeditordock.cpp  propertyeditordock.h  stepexchange.cpp  stepexchange.h
translations/: doids_ru.ts
